TestSuite/errors/err0231.pas
begin
  var a := blablabla&<byte>(0,1,2);
end.